Reworked 'custom-checkbox' block

--- a/src/pages/mixins.pug
+++ b/src/pages/mixins.pug
@@ -1,6 +1,7 @@
 mixin custom-checkbox(title)
   label(class="custom-checkbox")
     input(type="checkbox")
+    .fake
     span=title
 mixin checkbox-list(...items)
   .checkbox-list__field
