--- a/src/blocks/Form-Elements/custom-checkbox/custom-checkbox.scss
+++ b/src/blocks/Form-Elements/custom-checkbox/custom-checkbox.scss
@@ -1,47 +1,96 @@
 /* для элемента input c type="checkbox" */
-.custom-checkbox>input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
+// .custom-checkbox{
+//   display: block;
+// }
+// .custom-checkbox>input {
+//   position: absolute;
+//   z-index: -1;
+//   opacity: 0;
+// }
 
 /* для элемента label, связанного с .custom-checkbox */
-.custom-checkbox>span {
-  display: inline-flex;
-  align-items: center;
-  user-select: none;
-  font-family: Montserrat;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 18px;
-/* identical to box height, or 129% */
+// .custom-checkbox>span {
+//   display: inline-flex;
+//   align-items: center;
+//   user-select: none;
+//   font-family: Montserrat;
+// font-style: normal;
+// font-weight: normal;
+// font-size: 14px;
+// line-height: 18px;
+// /* identical to box height, or 129% */
 
 
-/* Dark 50% */
+// /* Dark 50% */
 
-color: rgba(31, 32, 65, 0.5);
-}
+// color: rgba(31, 32, 65, 0.5);
+// }
+// .custom-checkbox>span::first-line {
+//   align-items: center;
+// }
 
 /* создание в label псевдоэлемента before со следующими стилями */
-.custom-checkbox>span::before {
-  content: '';
+// .custom-checkbox>span::before {
+//   content: '';
+//   display: inline-block;
+//   width: 20px;
+//   height: 20px;
+//   flex-shrink: 0;
+//   flex-grow: 0;
+//   border: 1px solid rgba(31, 32, 65, 0.25);
+//   border-radius: 4px;
+//   margin-right: 10px;
+//   background-repeat: no-repeat;
+//   background-position: left 50% top 3.05px;
+//   background-size: 55% 55%;
+// }
+
+/* стили для чекбокса, находящегося в состоянии checked */
+// .custom-checkbox>input:checked+span::before {
+//   border-color:#BC9CFF;
+//   // background-color: #0b76ef;
+//   background-image: url("img/checked.svg");
+// }
+.custom-checkbox {
+  display: flex;
+}
+.custom-checkbox>input {
+  position: absolute;
+  display: none;
+}
+.custom-checkbox>span {
+  margin-top: 1px;
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: rgba(31, 32, 65, 0.5);
+}
+.fake {
+  display: inline-flex;
   flex-shrink: 0;
   flex-grow: 0;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 4px;
   margin-right: 10px;
-  background-repeat: no-repeat;
-  background-position: left 50% top 3.05px;
-  background-size: 55% 55%;
 }
-
-/* стили для чекбокса, находящегося в состоянии checked */
-.custom-checkbox>input:checked+span::before {
-  border-color:#BC9CFF;
-  // background-color: #0b76ef;
+.fake::before {
+  content: '';
+  width: 10px;
+  height: 10px;
+  background-repeat: no-repeat;
   background-image: url("img/checked.svg");
+  opacity: 0;
+}
+.custom-checkbox>input:checked + .fake::before {
+  opacity: 1;
+}
+.custom-checkbox>input:checked+.fake {
+  border-color:#BC9CFF;
 }
