--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -79,6 +79,15 @@ html(lang="ru")
               p.text Удобство <br>Окно в каждой из спален
             .line
         .colomn2
+          .checkbox-buttons-container
+            h3.name Checkbox Buttons
+            ul.checkbox-buttons-list
+              li 
+                +custom-checkbox("Можно курить")
+              li
+                +custom-checkbox("Можно с питомцами")
+              li
+                +custom-checkbox("Можно пригласить гостей (до 10 человек)")
         .colomn3
         .comment
 
