--- a/src/blocks/Form-Elements/custom-checkbox/custom-checkbox.scss
+++ b/src/blocks/Form-Elements/custom-checkbox/custom-checkbox.scss
@@ -58,7 +58,7 @@
   position: absolute;
   display: none;
 }
-.custom-checkbox>span {
+.custom-checkbox>.custom-checkbox__text {
   margin-top: 1px;
   display: inline-block;
   font-family: Montserrat;
@@ -68,7 +68,7 @@
   line-height: 18px;
   color: rgba(31, 32, 65, 0.5);
 }
-.fake {
+.custom-checkbox_fake {
   display: inline-flex;
   flex-shrink: 0;
   flex-grow: 0;
@@ -80,7 +80,7 @@
   border-radius: 4px;
   margin-right: 10px;
 }
-.fake::before {
+.custom-checkbox_fake::before {
   content: '';
   width: 10px;
   height: 10px;
@@ -88,9 +88,9 @@
   background-image: url("img/checked.svg");
   opacity: 0;
 }
-.custom-checkbox>input:checked + .fake::before {
+.custom-checkbox>input:checked + .custom-checkbox_fake::before {
   opacity: 1;
 }
-.custom-checkbox>input:checked+.fake {
+.custom-checkbox>input:checked+.custom-checkbox_fake {
   border-color:#BC9CFF;
 }
