--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -88,6 +88,11 @@ html(lang="ru")
                 +custom-checkbox("Можно с питомцами")
               li
                 +custom-checkbox("Можно пригласить гостей (до 10 человек)")
+          .radio-buttons-container
+            h3.name Radio Buttons
+            .radio-buttons
+              +custom-radio-button("Мужчина", "пол")
+              +custom-radio-button("Женщина", "пол")
         .colomn3
         .comment
 
