--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -93,6 +93,13 @@ html(lang="ru")
             .radio-buttons
               +custom-radio-button("Мужчина", "пол")
               +custom-radio-button("Женщина", "пол")
+          .toggle-container
+            h3.name Toggle
+            .toggles
+              .toggle-item
+                +toggle-item("Получать спецпредложения")
+              .toggle-item
+                +toggle-item("Получать спецпредложения")
         .colomn3
         .comment
 
