--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -100,6 +100,12 @@ html(lang="ru")
                 +toggle-item("Получать спецпредложения")
               .toggle-item
                 +toggle-item("Получать спецпредложения")
+          .like-buttos-container
+            h3.name like button
+            .like-button(data-status="disabled")
+              +like-button(2)
+            .like-button(data-status="disabled")
+              +like-button(11)
         .colomn3
         .comment
 
