--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -102,10 +102,11 @@ html(lang="ru")
                 +toggle-item("Получать спецпредложения")
           .like-buttos-container
             h3.name like button
-            .like-button(data-status="disabled")
-              +like-button(2)
-            .like-button(data-status="disabled")
-              +like-button(11)
+            .like-buttons
+              .like-button(data-status="disabled")
+                +like-button(2)
+              .like-button(data-status="disabled")
+                +like-button(11)
         .colomn3
         .comment
 
