--- a/src/main.scss
+++ b/src/main.scss
@@ -45,6 +45,7 @@ input[type="reset"] {
 @import './blocks/Form-Elements/toggle/toggle.scss';
 @import './blocks/Form-Elements/toggle-item/toggle-item.scss';
 @import './blocks/Form-Elements/like-button/like-button.scss';
+@import './blocks/Form-Elements/star-rate/star-rate.scss';
 .formElements{
   position: relative;
   padding: 140px 0 0 141px;
@@ -363,6 +364,7 @@ input[type="reset"] {
 .like-buttos-container {
   width: 89.72px;
   height: 51px;
+  margin-bottom: 40px;
   .name {
     margin-bottom: 16px;
     // font-size: 11.5px;
@@ -372,5 +374,10 @@ input[type="reset"] {
   }
   .like-button:first-child {
     margin-right: 10px;
+  }
+}
+.star-rate-container{
+  .name {
+    margin-bottom: 16px;
   }
 }
