--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -107,6 +107,13 @@ html(lang="ru")
                 +like-button(2)
               .like-button(data-status="disabled")
                 +like-button(11)
+          .star-rate-container
+            h3.name like button
+            .star-rates
+              .star-rate
+                +star-rate()
+              .star-rate
+                +star-rate()
         .colomn3
         .comment
 
