Added 'dropdown-room', 'dropdown-guests', 'minus-button', 'plus-button' mixins

--- a/src/blocks/Form-Elements/dopdown-guests/__item/dropdown-guests__item.scss
+++ b/src/blocks/Form-Elements/dopdown-guests/__item/dropdown-guests__item.scss
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
 }
-.dopdown-guests__item:nth-child(1) {
+.dropdown-guests__item:nth-child(1) {
   margin-bottom: 7px;
 }
-.dopdown-guests__item:nth-child(2) {
+.dropdown-guests__item:nth-child(2) {
   margin-bottom: 7px;
 }
