--- a/src/main.scss
+++ b/src/main.scss
@@ -376,7 +376,7 @@ input[type="reset"] {
   }
 }
 .star-rate-container {
-  margin-bottom: 50px;
+  margin-bottom: 196px;
   .name {
     margin-bottom: 16px;
   }
@@ -385,5 +385,13 @@ input[type="reset"] {
   }
   .star-rate:first-child {
     margin-right: 20px;
+  }
+}
+.dropdown-guests-container-expanded {
+  .name {
+    margin-bottom: 5px;
+  }
+  .dropdown-guests__text-field-default {
+    font-size: 14px;
   }
 }
