--- a/src/main.scss
+++ b/src/main.scss
@@ -39,6 +39,7 @@ input[type="reset"] {
 @import './blocks/Form-Elements/dropdown-room/dropdown-room.scss';
 @import './blocks/Form-Elements/subscription-text-field/subscription-text-field.scss';
 @import './blocks/Form-Elements/custom-checkbox/custom-checkbox.scss';
+@import './blocks/Form-Elements/rich-checkbox/rich-checkbox.scss';
 @import './blocks/Form-Elements/checkbox-list/checkbox-list.scss';
 @import './blocks/Form-Elements/custom-radio-button/custom-radio-button.scss';
 @import './blocks/Form-Elements/toggle/toggle.scss';
@@ -388,10 +389,23 @@ input[type="reset"] {
   }
 }
 .dropdown-guests-container-expanded {
+  margin-bottom: 99px;
   .name {
     margin-bottom: 5px;
   }
   .dropdown-guests__text-field-default {
     font-size: 14px;
+  }
+}
+.rich-checkbox-buttons-container {
+  width: 264px;
+  .name {
+    margin-bottom:  16px;
+  }
+  .rich-checkbox:first-child {
+    margin-bottom: 10px;
+  }
+  .checkbox-buttons-list li:first-child .rich-checkbox__discription {
+    width: 203px;
   }
 }
