--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -129,8 +129,13 @@ html(lang="ru")
               li
                 +rich-checkbox("Помощник для инвалидов", "На 1 этаже вас встретит специалист и проводит до номера.")
         .colomn3
+          .range-slider-container
+            .name Range Slider
+            span.range
+            .polzunok
         .comment
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    script(src="../JsSlider/jquery-asRange.js")
+    //- script(src="../JsSlider/jquery-asRange.js")
+    script(src="https://atuin.ru/demo/ui-slider/jquery-ui.min.js")
     script(src="../Form-Elements.js")
