Reworked 'button-default' and 'button-else' blocks

--- a/src/pages/mixins.pug
+++ b/src/pages/mixins.pug
@@ -1,3 +1,8 @@
+mixin button-default(text)
+  .button-default__text=text
+mixin button-else (text)
+  .button-else__body
+    .button-else__text= text
 mixin minus-button()
   img(src="./src/img/minus.svg")
 mixin plus-button()
