--- a/src/blocks/button-default/_button-default.scss
+++ b/src/blocks/button-default/_button-default.scss
@@ -1,15 +1,19 @@
 .button-default {
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
   border-radius: 22px;
-  padding: 0.875rem 1.3125rem 0 1.1875rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &__text {
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 15px;
-    text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
   }
+}
+.button-default:hover {
+  opacity: 0.5;
 }
