--- a/src/blocks/button-else/button-else.scss
+++ b/src/blocks/button-else/button-else.scss
@@ -1,24 +1,64 @@
+// .button-else {
+//   max-width: 99px;
+//   height: 44px;
+//   padding: 0.125rem;
+//   border-radius: 22px;
+//   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+//   &__body {
+//     min-width: 5.1875rem;
+//     height: 40px;
+//     border-radius: 22px;
+//     padding: 0.75rem 0 0 0;
+//     background: #FFFFFF;
+//   }
+//   &__text {
+//     text-align: center;
+//     font-family: Montserrat;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 12px;
+//     line-height: 15px;
+//     text-transform: uppercase;
+//     color: #BC9CFF;
+//   }
+// }
 .button-else {
-  max-width: 99px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 99px;
   height: 44px;
-  padding: 0.125rem;
   border-radius: 22px;
+}
+.button-else__body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  height: 92%;
+  position: relative;
+  z-index: 1;
+  background: #fff;
+  border-radius: 22px;
+}
+.button-else__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 11.5px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #BC9CFF;
+}
+.button-else::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: '';
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-  &__body {
-    min-width: 5.1875rem;
-    height: 40px;
-    border-radius: 22px;
-    padding: 0.75rem 0 0 0;
-    background: #FFFFFF;
-  }
-  &__text {
-    text-align: center;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
-    text-transform: uppercase;
-    color: #BC9CFF;
-  }
+  border-radius: 22px;
+}
+.button-else:hover::before {
+  opacity: 0.5;
 }
