--- a/src/blocks/button-default/_button-default.scss
+++ b/src/blocks/button-default/_button-default.scss
@@ -1,18 +1,11 @@
 .button-default {
+  @import './__text/button-default__text.scss';
+  @include button-w-h(99px,44px);
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
   border-radius: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
-  &__text {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-  }
 }
 .button-default:hover {
   opacity: 0.5;
